fixed button display issue on mobile, added padding:0 and display: inline-block to buttons

--- a/calculator/css/styles.css
+++ b/calculator/css/styles.css
@@ -55,9 +55,11 @@ h3 {
     width: 162px;
 }
 button {
+    display: inline-block;
     width: 50px;
     height: 50px;
     margin: 3px 0;
+    padding: 0;
 
     border: white solid 2px;
     border-color: white; /* fallback */
